# t2z

./: .gitignore  README.md  STATUS.md
crates/: Cargo.toml  justfile
crates/t2z-core/: Cargo.toml
crates/t2z-core/src/: lib.rs  shadow.rs  tests.rs
crates/t2z-uniffi/: Cargo.toml
crates/t2z-uniffi/src/: lib.rs
crates/t2z-wasm/: Cargo.toml  LICENSE_MIT  README.md
crates/t2z-wasm/src/: lib.rs  utils.rs
demo/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
demo/public/: _headers  _redirects
demo/src/: App.tsx  index.css  main.tsx
demo/src/components/: Button.tsx  CodeBlock.tsx  Input.tsx  LogPanel.tsx  StepIndicator.tsx
demo/src/components/steps/: FinalizeStep.tsx  InputsStep.tsx  PaymentsStep.tsx  ProposeStep.tsx  ProveStep.tsx  SetupStep.tsx  SignStep.tsx  VerifyStep.tsx  index.ts
demo/src/hooks/: useTransactionFlow.ts
demo/src/lib/: crypto.ts  types.ts
docs/: README.md  concepts.mdx  docs.json  index.mdx  quickstart.mdx
docs/api-reference/: append-signature.mdx  finalize-and-extract.mdx  get-sighash.mdx  index.mdx  inspect-pczt.mdx  parse-serialize.mdx  propose-transaction.mdx  prove-transaction.mdx  sign-transparent-input.mdx  utilities.mdx  verify-before-signing.mdx
docs/flow/: finalize.mdx  overview.mdx  propose.mdx  prove.mdx  sign.mdx  verify.mdx
docs/guides/: error-handling.mdx  external-signing.mdx  fee-calculation.mdx
sdks/: TYPESCRIPT_SDK_SUMMARY.md
sdks/go/: LICENSE  README.md  go.mod
sdks/go/examples/basic/: main.go
sdks/go/scripts/: build.sh  test.sh
sdks/go/t2z_uniffi/: t2z_uniffi.go  t2z_uniffi.h  t2z_uniffi_test.go
sdks/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
sdks/kotlin/scripts/: build.sh  test.sh
sdks/kotlin/src/main/kotlin/uniffi/t2z_uniffi/: t2z_uniffi.kt
sdks/kotlin/src/test/kotlin/uniffi/t2z_uniffi/: T2zTest.kt
sdks/typescript/: .eslintrc.json  .gitignore  CHANGELOG.md  IMPLEMENTATION.md  README.md  STATUS.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
sdks/typescript/examples/: basic.ts  browser-example.html  error-handling.ts  multi-party.ts
sdks/typescript/src/: index.ts  napi.ts  t2z.ts  types.ts
wrapper/: Cargo.toml  HALO2.md  IMPLEMENTATION.md  Makefile  README.md  build.rs
wrapper/src/: lib.rs  napi_bindings.rs  uniffi_bindings.rs
