[workspace]
members = ["t2z-core", "t2z-wasm", "t2z-uniffi"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Prithvish <deformercoding@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/d4mr/t2z"

[workspace.dependencies]
# Internal crates
t2z-core = { path = "t2z-core" }

# Core PCZT functionality
pczt = { version = "0.5", features = [
  "orchard",
  "transparent",
  "io-finalizer",
  "prover",
  "signer",
  "spend-finalizer",
  "tx-extractor",
  "zcp-builder",
] }

# Zcash dependencies
orchard = { version = "0.11", features = ["circuit"] }
sapling-crypto = { version = "0.5", features = ["circuit"] }
zcash_transparent = { version = "0.6", features = ["transparent-inputs"] }
zcash_primitives = { version = "0.26", features = ["transparent-inputs"] }
zcash_protocol = "0.7"
zcash_address = "0.10"
zcash_script = "0.4"

# Crypto
secp256k1 = "0.29"
getrandom = { version = "0.2", features = ["js"] }
rand_core = { version = "0.6", features = ["getrandom"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.11"
postcard = { version = "1.0", features = ["alloc"] }
hex = "0.4"
base64 = "0.22"

# Error handling
thiserror = "2.0"

# Caching
once_cell = "1.19"

# WASM
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }

# UniFFI
uniffi = "0.30"

# Dev/test
wasm-bindgen-test = "0.3.34"
