[package]
name = "pczt-wrapper"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
# Core PCZT functionality
pczt = { version = "0.5", features = [
  "orchard",
  "transparent",
  "io-finalizer",
  "prover",
  "signer",
  "spend-finalizer",
  "tx-extractor",
  "zcp-builder",
] }

# Dependencies required by pczt with necessary features
orchard = { version = "0.11", features = ["circuit"] }
sapling-crypto = { version = "0.5", features = ["circuit"] }
rand_core = { version = "0.6", features = ["getrandom"] }
zcash_transparent = { version = "0.6", features = ["transparent-inputs"] }
zcash_primitives = { version = "0.26", features = ["transparent-inputs"] }
zcash_protocol = "0.7"
zcash_address = "0.10"
zcash_script = "0.4"
secp256k1 = "0.29"
base64 = "0.22"

# For proving key caching
once_cell = "1.19"


# Serialization
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

# Error handling
thiserror = "2.0"

# For FFI bindings (Go, Kotlin, Java)
uniffi = { version = "0.30", optional = true }

# NAPI for Node.js/TypeScript/WASM
napi = { version = "3", features = ["full"], optional = true }
napi-derive = { version = "3", optional = true }

# For downloading proving keys (optional)
reqwest = { version = "0.12", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
# Blocking HTTP for native platforms
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
# Async HTTP for WASM
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[build-dependencies]
uniffi = { version = "0.30", features = ["build"], optional = true }
napi-build = { version = "2", optional = true }

[dev-dependencies]

[features]
default = []
uniffi-bindings = ["uniffi"]
napi-bindings = ["napi", "napi-derive", "napi-build"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
