[package]
name = "t2z-wasm"
version = "0.0.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for T2Z - Transparent to Zero-knowledge Zcash transactions"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
t2z-core.workspace = true

# WASM
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
web-sys.workspace = true

# Serialization (for hex encoding in JS interface)
hex.workspace = true

# Needed to re-export for proving key access
once_cell.workspace = true

# For address generation
orchard.workspace = true
zcash_address.workspace = true
zcash_protocol.workspace = true
rand_core.workspace = true
getrandom.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[profile.release]
# Optimize for size in WASM
opt-level = "s"
lto = true
